Small update to Carousel, changed controller name, pulled TaskTriggerTest

--- a/force-app/main/default/classes/CarouselController.cls
+++ b/force-app/main/default/classes/CarouselController.cls
@@ -1,4 +1,4 @@
-public with sharing class RecommendationController {
+public with sharing class CarouselController {
 
     public class RecommendationWrapper {
         @AuraEnabled public Id recordId;
